--- a/myweb.html
+++ b/myweb.html
@@ -1,8 +1,7 @@
 <html>
-<heads><title>My web</title></head>
+<heads><title>My web!!!</title></head>
 <body>
 <hl> This is my website</hl>
-<p> This is 1st paragraph</p>
 <p> This is 2nd paragraph</p>
 </body>
 </html>
