--- a/myweb.html
+++ b/myweb.html
@@ -2,6 +2,8 @@
 <heads><title>My web!!!</title></head>
 <body>
 <hl> This is my website</hl>
+<p> This is 1st paragraph</p>
 <p> This is 2nd paragraph</p>
+<p> This is 3rd paragraph</p>
 </body>
 </html>
